classDiagram
    class Profile {
        +UUID id
        +String name
        +String employee_id
        +String phone
        +String email
        +String department_level1
        +String department_level2
        +String department_level3
        +String role
        +Boolean is_disabled
        +String region (旧字段，保留)
        +String department (旧字段，保留)
    }

    class Message {
        +UUID id
        +UUID sender_id
        +Array receiver_ids
        +Array department_card_ids
        +String status
        +Array replied_by
        +JSONB content
    }

    class DepartmentCard {
        +String id (computed)
        +String dept_level2
        +String dept_level3
        +Array leader_ids
    }

    class DepartmentConfig {
        +Array businessLines
        +Array laboratories
        +Array groups
    }

    Profile "1" -- "many" Message : sends/receives
    Profile "many" -- "1" DepartmentCard : leaders
